--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ PyOpenGL-accelerate==3.1.5
 PyOpenGL==3.1.5
 pyprind
 gym[all]==0.10.3
-git+https://github.com/hermanjakobsen/mujoco-py
+mujoco-py==2.0.2.13
