--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -59,20 +59,18 @@ RUN curl -o /usr/local/bin/patchelf https://s3-us-west-2.amazonaws.com/openai-sc
 
 ENV LANG C.UTF-8
 
-ARG mujoco_roboy_path
-
 RUN mkdir -p /root/.mujoco \
     && wget https://www.roboti.us/download/mujoco200_linux.zip -O mujoco.zip \
     && unzip mujoco.zip -d /root/.mujoco \
     && mv /root/.mujoco/mujoco200_linux /root/.mujoco/mujoco200 \
     && rm mujoco.zip
-COPY $mujoco_roboy_path/mjkey.txt /root/.mujoco/
+COPY ./mjkey.txt /root/.mujoco/
 ENV LD_LIBRARY_PATH /root/.mujoco/mujoco200/bin:${LD_LIBRARY_PATH}
 ENV LD_LIBRARY_PATH /usr/local/nvidia/lib64:${LD_LIBRARY_PATH}
 ENV MUJOCO_GL=egl
 ENV PYOPENGL_PLATFORM=egl
 
-COPY $mujoco_roboy_path/requirements.gpu.txt /
+COPY ./requirements.gpu.txt /
 RUN pip3 install --upgrade pip wheel setuptools
 RUN pip3 install -r /requirements.gpu.txt
 
